# cpp-template

./: CMakeLists.txt  README.md  build.sh  clone.sh  include_resources.cmake  include_tests.cmake
src/: main.cpp
test/: CMakeLists.txt
